--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
   "dependencies": {
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "btoa": "^1.2.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "fetch": "^1.1.0",
+    "isomorphic-fetch": "^3.0.0"
   }
 }
